# churn-guard-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
api/: main.py  model_loader.py  schemas.py
churnguard/: data.py  evaluate.py  train.py
docs/: commandes.txt
k8s/: api.yaml  mlflow.yaml  namespace.yaml  pvc.yaml  trainer-job.yaml
monitoring/: drift_report.py
monitoring/reports/: drift_report.html
notebook/: exploration.ipynb
scripts/k8s/: k8s_deploy.py  k8s_reset_k3d_cluster.py
tests/: test_data.py  test_train.py
