[project]
name = "churn-guard"
version = "1.0.0"
description = "Industrializing a customer churn prediction model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.21",
    "fastapi>=0.136.1",
    "jupyter>=1.0",
    "mlflow>=3.12.0",
    "mypy>=1.20.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "scikit-learn>=1.3",
    "uvicorn>=0.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
exclude = [
    "notebook",
    "*.ipynb",
]


[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
exclude = ["*.ipynb"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

# Appliquer uniquement au package
packages = ["churnguard"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
